--- a/research.html
+++ b/research.html
@@ -55,11 +55,11 @@
                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                      Research<span class="caret"></span></a>
                      <ul class="dropdown-menu">
-                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#team">Team</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#topics">Research Topics</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#participate">Participate</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#pubs">Publications</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-research-content').show();" href="#join">Join Us</a></li>
+                        <li><a onclick="javascript:reset_menus();$('#tab-team-content').show();" href="#team">Team</a></li>
+                        <li><a onclick="javascript:reset_menus();$('#tab-topics-content').show();" href="#topics">Research Topics</a></li>
+                        <li><a onclick="javascript:reset_menus();$('#tab-participate-content').show();" href="#participate">Participate</a></li>
+                        <li><a onclick="javascript:reset_menus();$('#tab-pubs-content').show();" href="#pubs">Publications</a></li>
+                        <li><a onclick="javascript:reset_menus();$('#tab-join-content').show();" href="#join">Join Us</a></li>
 
                      </ul>
                   </li>
@@ -170,6 +170,44 @@
       </section>
 
 
+<!-- Publications Section -->
+      <section  name="pubs" id="pubs">
+         <div class="container lead">
+         <div style="text-align: left; margin-top:10px" class="col-md-12">
+         <b class="noshow" style="display:none;" id="tab-10">
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-pubs-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         </b>
+         <div class="allshow" style="display:none;" id="tab-pubs-content">
+            <hr class="star-primary">
+            <h2> Publications </h2>
+          <div class="container lead">
+            <div class="row">
+               <div class="col-md-12">
+                  <h2>Refereed Journal Articles</h2>
+    <ol style="margin-left: 0; padding-left: 0;">
+        <li style="list-style: none;">
+            <p>[1] Negro A, Montagna F, Teng MN, <strong>Neal T</strong>, Thomas S and King S (2023) "Analysis of the evolution of COVID-19 disease understanding through temporal knowledge graphs." <em>Front. Res. Metr. Anal.</em> 8:1204801. doi: 10.3389/frma.2023.1204801</p>
+        </li>
+        <li style="list-style: none;">
+            <p>[2] Chaudhary, M., Kosyluk, K., Thomas, S., and <strong>Neal, T</strong>. "On the use of aspect-based sentiment analysis of Twitter data to explore the experiences of African Americans during COVID-19." <em>Sci Rep</em> 13, 10694 (2023). <a href="https://doi.org/10.1038/s41598-023-37592-1">https://doi.org/10.1038/s41598-023-37592-1</a>.</p>
+        </li>
+        <li style="list-style: none;">
+            <p>[3] Kristin A. Kosyluk, Jennifer T. Tran, Sayde King, Katie Torres and <strong>Tempestt Neal</strong> (2023) "Preliminary effectiveness study of the Cope Notes digital mental Health program", <em>Journal of Mental Health</em>, DOI: 10.1080/09638237.2023.2182424.</p>
+        </li>
+        <li style="list-style: none;">
+            <p>[4] Sayde Leya King, Jana Lebert, Lacey Anne Karpisek, Amelia Phillips, <strong>Tempestt Neal</strong>, and Kristin Kosyluk. "Characterizing user experiences with an sms text messaging–based mhealth intervention: Mixed methods study." <em>JMIR Form Res</em>, volume 6, page e35699, May 2022. <a href="https://doi.org/10.2196/35699">https://doi.org/10.2196/35699</a>.</p>
+        </li>
+        <li style="list-style: none;">
+            <p>[5] <strong>Tempestt Neal</strong> and Damon L. Woodard. "You are not acting like yourself: A study on soft biometric classification, person identification, and mobile device use." <em>IEEE Transactions on Biometrics, Behavior, and Identity Science</em>, volume 1, pages 109–122, 2019.</p>
+        </li>
+    </ol>
+               </div>
+            </div>
+         </div>
+
+            <hr class="star-primary">
+         </div>
+      </section>
 
          
       <!-- Contact Section -->
