--- a/research.html
+++ b/research.html
@@ -46,12 +46,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav navbar-right">
+                  <li><a target="_blank" href="index.html">Home</a></li>
                   <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
-<!--                   <li class="page-scroll">
+                  <!--                   <li class="page-scroll">
                      <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#">Research</a>
-                  </li> -->
-
-                   <li class="dropdown">
+                     </li> -->
+                  <li class="dropdown">
                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                      Research<span class="caret"></span></a>
                      <ul class="dropdown-menu">
@@ -60,11 +60,8 @@
                         <li><a onclick="javascript:reset_menus();$('#tab-participate-content').show();" href="#participate">Participate</a></li>
                         <li><a onclick="javascript:reset_menus();$('#tab-pubs-content').show();" href="#pubs">Publications</a></li>
                         <li><a onclick="javascript:reset_menus();$('#tab-join-content').show();" href="#join">Join Us</a></li>
-
                      </ul>
                   </li>
-
-                  
                   <li class="dropdown">
                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                      Publications<span class="caret"></span></a>
@@ -140,7 +137,6 @@
          </h4>
          <h4><i>Expertise: Biometrics &amp; Smart Sensing </i> <a href="#intro" onclick="javascript:reset_menus();$('#tab-intro-content').show();" class="btn-primary btn-xs">&raquo;</a><br></h4>
       </div>
-
       <!-- Participate Section -->
       <section  name="participate" id="participate">
          <div class="container lead">
@@ -151,26 +147,22 @@
          <div class="allshow" style="display:none;" id="tab-participate-content">
             <hr class="star-primary">
             <h2> Research Study Participation </h2>
-          <div class="container lead">
-            <div class="row">
-               <div class="col-md-12">
-                  <h4>Our laboratory frequently conducts research studies that require input from participants.</h4>
-                  <p>We are currently seeking participants for the following studies:</p>
-                  <ul>
-                     <li><b>Study 005331: Smart Door Authentication System</b> (<a href="images/5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem</li>
-                     <li><b>Study 006481: I-CLAIM: Focus Groups: Assessing User Authentication Experiences with Historically Excluded Groups</b> (<a href="images/6481.pdf" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Hoorad Abootalebi</li>
-
-                  </ul>
+            <div class="container lead">
+               <div class="row">
+                  <div class="col-md-12">
+                     <h4>Our laboratory frequently conducts research studies that require input from participants.</h4>
+                     <p>We are currently seeking participants for the following studies:</p>
+                     <ul>
+                        <li><b>Study 005331: Smart Door Authentication System</b> (<a href="images/5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem</li>
+                        <li><b>Study 006481: I-CLAIM: Focus Groups: Assessing User Authentication Experiences with Historically Excluded Groups</b> (<a href="images/6481.pdf" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Hoorad Abootalebi</li>
+                     </ul>
+                  </div>
                </div>
             </div>
-         </div>
-
             <hr class="star-primary">
          </div>
       </section>
-
-
-<!-- Publications Section -->
+      <!-- Publications Section -->
       <section  name="pubs" id="pubs">
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
@@ -180,36 +172,89 @@
          <div class="allshow" style="display:none;" id="tab-pubs-content">
             <hr class="star-primary">
             <h2> Publications </h2>
-          <div class="container lead">
-            <div class="row">
-               <div class="col-md-12">
-                  <h4>Refereed Journal Articles</h4>
-    <ol style="margin-left: 0; padding-left: 0;">
-        <li style="list-style: none;">
-            <p>[1] Negro A, Montagna F, Teng MN, <strong>Neal T</strong>, Thomas S and King S (2023) "Analysis of the evolution of COVID-19 disease understanding through temporal knowledge graphs." <em>Front. Res. Metr. Anal.</em> 8:1204801. doi: 10.3389/frma.2023.1204801</p>
-        </li>
-        <li style="list-style: none;">
-            <p>[2] Chaudhary, M., Kosyluk, K., Thomas, S., and <strong>Neal, T</strong>. "On the use of aspect-based sentiment analysis of Twitter data to explore the experiences of African Americans during COVID-19." <em>Sci Rep</em> 13, 10694 (2023). <a href="https://doi.org/10.1038/s41598-023-37592-1">https://doi.org/10.1038/s41598-023-37592-1</a>.</p>
-        </li>
-        <li style="list-style: none;">
-            <p>[3] Kristin A. Kosyluk, Jennifer T. Tran, Sayde King, Katie Torres and <strong>Tempestt Neal</strong> (2023) "Preliminary effectiveness study of the Cope Notes digital mental Health program", <em>Journal of Mental Health</em>, DOI: 10.1080/09638237.2023.2182424.</p>
-        </li>
-        <li style="list-style: none;">
-            <p>[4] Sayde Leya King, Jana Lebert, Lacey Anne Karpisek, Amelia Phillips, <strong>Tempestt Neal</strong>, and Kristin Kosyluk. "Characterizing user experiences with an sms text messaging–based mhealth intervention: Mixed methods study." <em>JMIR Form Res</em>, volume 6, page e35699, May 2022. <a href="https://doi.org/10.2196/35699">https://doi.org/10.2196/35699</a>.</p>
-        </li>
-        <li style="list-style: none;">
-            <p>[5] <strong>Tempestt Neal</strong> and Damon L. Woodard. "You are not acting like yourself: A study on soft biometric classification, person identification, and mobile device use." <em>IEEE Transactions on Biometrics, Behavior, and Identity Science</em>, volume 1, pages 109–122, 2019.</p>
-        </li>
-    </ol>
+            <div class="container lead">
+               <div class="row">
+                  <div class="col-md-12">
+                     <h4>Refereed Journal Articles</h4>
+                     <ol style="margin-left: 0; padding-left: 0;">
+                        <li style="list-style: none;">
+                           <p>[1] Negro A, Montagna F, Teng MN, <strong>Neal T</strong>, Thomas S and King S (2023) "Analysis of the evolution of COVID-19 disease understanding through temporal knowledge graphs." <em>Front. Res. Metr. Anal.</em> 8:1204801. doi: 10.3389/frma.2023.1204801</p>
+                        </li>
+                        <li style="list-style: none;">
+                           <p>[2] Chaudhary, M., Kosyluk, K., Thomas, S., and <strong>Neal, T</strong>. "On the use of aspect-based sentiment analysis of Twitter data to explore the experiences of African Americans during COVID-19." <em>Sci Rep</em> 13, 10694 (2023). <a href="https://doi.org/10.1038/s41598-023-37592-1">https://doi.org/10.1038/s41598-023-37592-1</a>.</p>
+                        </li>
+                        <li style="list-style: none;">
+                           <p>[3] Kristin A. Kosyluk, Jennifer T. Tran, Sayde King, Katie Torres and <strong>Tempestt Neal</strong> (2023) "Preliminary effectiveness study of the Cope Notes digital mental Health program", <em>Journal of Mental Health</em>, DOI: 10.1080/09638237.2023.2182424.</p>
+                        </li>
+                        <li style="list-style: none;">
+                           <p>[4] Sayde Leya King, Jana Lebert, Lacey Anne Karpisek, Amelia Phillips, <strong>Tempestt Neal</strong>, and Kristin Kosyluk. "Characterizing user experiences with an sms text messaging–based mhealth intervention: Mixed methods study." <em>JMIR Form Res</em>, volume 6, page e35699, May 2022. <a href="https://doi.org/10.2196/35699">https://doi.org/10.2196/35699</a>.</p>
+                        </li>
+                        <li style="list-style: none;">
+                           <p>[5] <strong>Tempestt Neal</strong> and Damon L. Woodard. "You are not acting like yourself: A study on soft biometric classification, person identification, and mobile device use." <em>IEEE Transactions on Biometrics, Behavior, and Identity Science</em>, volume 1, pages 109–122, 2019.</p>
+                        </li>
+                     </ol>
+                     <h3>Refereed Conference and Workshop Articles</h3>
+                     <ol style="list-style-type: none; padding-left: 0;">
+                        <li>
+                           <p>Saandeep Lakshminarayan, Meghna Chaudhary, <strong>Tempestt Neal</strong>, and Shaun Canavan. Multimodal Context-based Continuous Authentication.
+                              2023 IEEE International Joint Conference on Biometrics (IJCB). Accepted (Paper ID: IJCB2023-179).
+                           </p>
+                        </li>
+                        <li>
+                           <p>King, S.L., Johnson, N., Kosyluk, K., <strong>Neal, T.</strong> (2023). Therapist Perceptions of Automated Deception Detection in Mental Health Applications. In: Degen, H., Ntoa, S. (eds) Artificial Intelligence in HCI. HCII 2023. Lecture Notes in Computer Science(), vol 14050. Springer, Cham. <a href="https://doi.org/10.1007/978-3-031-35891-3_6">https://doi.org/10.1007/978-3-031-35891-3_6</a>.</p>
+                        </li>
+                        <li>
+                           <p>Lozano, W., King, S., <strong>Neal, T.</strong> (2023). Observations of Caregivers of Persons with Dementia: A Qualitative Study to Assess the Feasibility of Behavior Recognition Using AI for Supporting At-Home Care. In: Gao, Q., Zhou, J. (eds) Human Aspects of IT for the Aged Population. HCII 2023. Lecture Notes in Computer Science, vol 14043. Springer, Cham. <a href="https://doi.org/10.1007/978-3-031-34917-1_23">https://doi.org/10.1007/978-3-031-34917-1_23</a>.</p>
+                        </li>
+                        <li>
+                           <p>N. Loecher, S. King, J. Cabo, <strong>T. Neal</strong> and K. Kosyluk, "Assessing the Efficacy of a Self-Stigma Reduction Mental Health Program with Mobile Biometrics: Work-in-Progress," <em>2023 IEEE 17th International Conference on Automatic Face and Gesture Recognition (FG)</em>, Waikoloa Beach, HI, USA, 2023, pp. 1-6, doi: <a href="https://doi.org/10.1109/FG57933.2023.10042655">10.1109/FG57933.2023.10042655</a>.</p>
+                        </li>
+                        <li>
+                           <p><strong>Tempestt Neal</strong>, Lisa Anthony, Shaun Canavan, Jaime Ruiz, Saandeep Aathreya, Meghna Chaudhary, Yu-Peng Chen, Heting Wang, Rodrigo Calvo, Liza Jivnani, and Nicolas Ng Wai. Toward understanding children’s use and understanding of user authentication systems: Work-in-progress. In <em>USENIX Symposium on Usable Privacy and Security (SOUPS)</em>, Boston, MA, USA, August 2022.</p>
+                        </li>
+                        <li>
+                           <p>Parush Gera and <strong>Tempestt Neal</strong>. A comparative analysis of stance detection approaches and datasets. In <em>Proceedings of the 3rd Workshop on Evaluation and Comparison of NLP Systems</em>, pages 58–69, Online, November 2022. Association for Computational Linguistics. <a href="https://aclanthology.org/2022.eval4nlp-1.7.pdf">https://aclanthology.org/2022.eval4nlp-1.7.pdf</a>.</p>
+                        </li>
+                        <li>
+                           <p>Mohamed Ebraheem, Sayde King, and <strong>Tempestt Neal</strong>. Lip movement as a wifi-enabled behavioral biometric: A pilot study. In Constantine Stephanidis, Margherita Antona, and Stavroula Ntoa, editors, <em>HCI International 2022 Posters</em>, pages 473–480, Cham, 2022. Springer International Publishing.</p>
+                        </li>
+                        <li>
+                           <p>Khadija Zanna, <strong>Tempestt Neal</strong>, and Shaun Canavan. Clustering of physiological signals by emotional state, race, and sex. In Companion Publication of the <em>2021 International Conference on Multimodal Interaction, ICMI '21 Companion</em>, page 312–316, New York, NY, USA, 2021. Association for Computing Machinery.</p>
+                        </li>
+                        <li>
+                           <p>Matthew Sumpter and <strong>Tempestt Neal</strong>. User perceptions of article credibility warnings: Towards understanding the influence of journalists and AI agents. In <em>MEDIATE 2021</em> in conjunction with the <em>15th International AAAI Conference on Web and Social Media (ICWSM)</em>, 2021.</p>
+                        </li>
+                        <li>
+                           <p>SK Rahatul Jannat, Diego Fabiano, Shaun Canavan, and <strong>Tempestt Neal</strong>. Subject identification across large expression variations using 3D facial landmarks. In Alberto Del Bimbo, Rita Cucchiara, Stan Sclaroff, Giovanni Maria Farinella, Tao Mei, Marco Bertini, Hugo Jair Escalante, and Roberto Vezzani (Eds.), <em>Pattern Recognition. ICPR International Workshops and Challenges</em>, pages 5–13, Cham, 2021. Springer International Publishing.</p>
+                        </li>
+                        <li>
+                           <p><strong>Tempestt Neal</strong> and Ashokkumar Patel. A brief literature review and survey of adult perceptions on biometric recognition for infants and toddlers. In <em>2020 IEEE International Joint Conference on Biometrics (IJCB)</em>, pages 1–10, 2020.</p>
+                        </li>
+                        <li>
+                           <p><strong>Tempestt Neal</strong> and Shaun Canavan. Mood versus identity: Studying the influence of affective states on mobile biometrics. In <em>2020 15th IEEE International Conference on Automatic Face and Gesture Recognition (FG 2020)</em>, pages 562–566, 2020.</p>
+                        </li>
+                        <li>
+                           <p>Sayde King, Mohamed Ebraheem, Khadija Zanna, and <strong>Tempestt Neal</strong>. Learning a privacy-preserving global feature set for mood classification using smartphone activity and sensor data. In <em>2020 15th IEEE International Conference on Automatic Face and Gesture Recognition (FG 2020)</em>, pages 582–586, 2020.</p>
+                        </li>
+                        <li>
+                           <p>Parush Gera, Nadia Thomas, and <strong>Tempestt Neal</strong>. Hesitation while posting: A cross-sectional survey of sensitive topics and opinion sharing on social media. In <em>International Conference on Social Media and Society (SMSociety'20)</em>, page 134–140, New York, NY, USA, 2020. Association for Computing Machinery.</p>
+                        </li>
+                        <li>
+                           <p>B. M. S. Bahar Talukder, Vineetha Menon, Biswajit Ray, <strong>Tempestt Neal</strong>, and Md Tauhidur Rahman. Towards the avoidance of counterfeit memory: Identifying the DRAM origin. In <em>2020 IEEE International Symposium on Hardware Oriented Security and Trust (HOST)</em>, pages 111–121, 2020.</p>
+                        </li>
+                        <li>
+                           <p><strong>Tempestt Neal</strong> and Damon Woodard. Mobile biometrics, replay attacks, and behavior profiling: An empirical analysis of impostor detection. In <em>2019 International Conference on Biometrics (ICB)</em>, pages 1–8, 2019.</p>
+                        </li>
+                        <li>
+                           <p><strong>Tempestt Neal</strong>, Md Asaduzzaman Noor, Parush Gera, Khadija Zanna, and Gurpreet Kaptan. Authenticating phone users using a gait-based histogram approach on mobile app sessions. In <em>2019 International Conference on Biometrics (ICB)</em>, pages 1–7, 2019.</p>
+                        </li>
+                     </ol>
+                  </div>
                </div>
             </div>
-         </div>
-
             <hr class="star-primary">
          </div>
       </section>
-
-         
       <!-- Contact Section -->
       <section  name="contact" id="contact">
          <div class="container lead">
