--- a/research.html
+++ b/research.html
@@ -163,6 +163,8 @@
          <div class="allshow" style="display:none;" id="tab-team-content">
             <hr class="star-primary">
             <h2> CIBeR Members </h2>
+            <hr class="star-primary">
+
             <div class="container lead">
                <div class="row">
                   <div class="col-md-12">
@@ -206,6 +208,7 @@
          <div class="allshow" style="display:none;" id="tab-join-content">
             <hr class="star-primary">
             <h2> Join the Lab </h2>
+            <hr class="star-primary">
             <div class="container lead">
                <div class="row">
                   <div class="col-md-12">
@@ -259,6 +262,7 @@
          <div class="allshow" style="display:none;" id="tab-participate-content">
             <hr class="star-primary">
             <h2> Research Study Participation </h2>
+            <hr class="star-primary">
             <div class="container lead">
                <div class="row">
                   <div class="col-md-12">
@@ -284,6 +288,8 @@
          <div class="allshow" style="display:none;" id="tab-pubs-content">
             <hr class="star-primary">
             <h2> Publications </h2>
+            <hr class="star-primary">
+
             <div class="container lead">
                <div class="row">
                   <div class="col-md-12">
