--- a/research.html
+++ b/research.html
@@ -229,26 +229,43 @@
                      <div class="member">
                         <img src="images/hoorad.jpeg" alt="Student 1">
                         <h3>Hoorad Abootalebi</h3>
+                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+
                      </div>
                      <div class="member">
                         <img src="images/sayde.png" alt="Student 2">
                         <h3>Sayde King</h3>
+                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+
                      </div>
                      <div class="member">
                         <img src="images/parush.jpg" alt="Student 3">
                         <h3>Parush Gera</h3>
+                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+
                      </div>
                      <div class="member">
                         <img src="images/meghna.jpg" alt="Student 3">
                         <h3>Meghna Chaudhary</h3>
+                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+
                      </div>
                      <div class="member">
                         <img src="images/mohamed.jpeg" alt="Student 3">
                         <h3>Mohamed Ebraheem</h3>
+                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+
                      </div>
                      <div class="member">
                         <img src="images/wilson.jpeg" alt="Student 3">
                         <h3>Wilson Lozano</h3>
+                        <p>Computer Science and Engineering, Ph.D. Student</p>
+
+                     </div>
+                      <div class="member">
+                        <img src="images/wilson.jpeg" alt="Student 3">
+                        <h3>Georgia Ng Wai</h3>
+                         <p>Computer Science, Undergraduate Student</p>
                      </div>
                   </div>
                </div>
