--- a/research.html
+++ b/research.html
@@ -263,7 +263,7 @@
 
                      </div>
                       <div class="member">
-                        <img src="images/wilson.jpeg" alt="Student 3">
+                        <img src="images/georgia.jpg" alt="Student 3">
                         <h3>Georgia Ng Wai</h3>
                          <p>Computer Science, Undergraduate Student</p>
                      </div>
