--- a/research.html
+++ b/research.html
@@ -235,13 +235,13 @@
                      <div class="member">
                         <img src="images/sayde.png" alt="Student 2">
                         <h3>Sayde King</h3>
-                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+                                                <p>Computer Science and Engineering, Ph.D. Candidate</p>
 
                      </div>
                      <div class="member">
                         <img src="images/parush.jpg" alt="Student 3">
                         <h3>Parush Gera</h3>
-                                                <p>Computer Science and Engineering, Ph.D. Student</p>
+                                                <p>Computer Science and Engineering, Ph.D. Candidate</p>
 
                      </div>
                      <div class="member">
