--- a/research.html
+++ b/research.html
@@ -158,7 +158,7 @@
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
          <b class="noshow" style="display:none;" id="tab-10">
-         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-topics-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-topics-content').toggle();">Research Areas  <span class="glyphicon glyphicon-chevron-down"></span></button>
          </b>
          <div class="allshow" style="display:none;" id="tab-topics-content">
             <hr class="star-primary">
@@ -217,7 +217,7 @@
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
          <b class="noshow" style="display:none;" id="tab-10">
-         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-team-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-team-content').toggle();">Team  <span class="glyphicon glyphicon-chevron-down"></span></button>
          </b>
          <div class="allshow" style="display:none;" id="tab-team-content">
             <hr class="star-primary">
@@ -277,7 +277,7 @@
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
          <b class="noshow" style="display:none;" id="tab-10">
-         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-join-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-join-content').toggle();">Join the Lab  <span class="glyphicon glyphicon-chevron-down"></span></button>
          </b>
          <div class="allshow" style="display:none;" id="tab-join-content">
             <hr class="star-primary">
@@ -330,7 +330,7 @@
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
          <b class="noshow" style="display:none;" id="tab-10">
-         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-participate-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-participate-content').toggle();">Participate in Research  <span class="glyphicon glyphicon-chevron-down"></span></button>
          </b>
          <div class="allshow" style="display:none;" id="tab-participate-content">
             <hr class="star-primary">
@@ -355,7 +355,7 @@
          <div class="container lead">
          <div style="text-align: left; margin-top:10px" class="col-md-12">
          <b class="noshow" style="display:none;" id="tab-10">
-         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-pubs-content').toggle();">Contact  <span class="glyphicon glyphicon-chevron-down"></span></button>
+         <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-pubs-content').toggle();">Publications  <span class="glyphicon glyphicon-chevron-down"></span></button>
          </b>
          <div class="allshow" style="display:none;" id="tab-pubs-content">
             <hr class="star-primary">
