--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -162,7 +162,9 @@
          </b>
          <div class="allshow" style="display:none;" id="tab-topics-content">
             <hr class="star-primary">
-            <h2> Age-Aware User Authentication: NSF Research Experience for Teachers and Undergraduates 2023 Summer Project </h2>
+            <h2>
+            <img src="images/nsf.png" style="float:left;width:42px;height:42px;">
+            Age-Aware User Authentication: NSF Research Experience for Teachers and Undergraduates 2023 Summer Project </h2>
             <hr class="star-primary">
             <div class="container lead">
                <div class="row">
