--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -250,7 +250,8 @@ University of South Florida </p>
                      
                      <h2>Participant Demographics</h2>
 
-                    Eight individuals participated in this study. Participants reported enrollment in the Computer Science and Engineering program, while two were enrolled in Medical Engineering, all a part of the University of South Florida's College of Engineering.
+Eight individuals were recruited for this study through various channels, including email invitations, USF social media platforms, paper flyers distributed across campus and within on-campus residence halls, campus-wide email distributions, and recruitment videos. Additionally, study flyers were shared with our established collaborators for dissemination to potential participants and were made available in the university student center. Invited participants reported enrollment in the Computer Science and Engineering program, with two individuals also enrolled in Medical Engineering, all of whom are affiliated with the University of South Florida's College of Engineering. Each participant received a $75 e-gift card per brainstorming session and a $50 e-gift card for completing the final focus group. This study was approved by USF's Institutional Review Board as Study #005606, and was funded by NSF's Secure and Trustworthy Cyberspace Program, Grant #2039373.
+
 
 
                     <table>
