--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -18,6 +18,10 @@
          object-fit: cover;
          margin-bottom: 10px;
          }
+         table, th, td {
+  border: 1px solid black;
+  border-radius: 10px;
+}
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <!-- Font Awesome Icons -->
