--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -252,7 +252,7 @@ University of South Florida </p>
                </div>
            
                      
-                     <h2>Participant Demographics</h2>
+                     <h2>Participant Recruitment and Demographics</h2>
 
 Eight individuals were recruited for this study through various channels, including email invitations, USF social media platforms, paper flyers distributed across campus and within on-campus residence halls, campus-wide email distributions, and recruitment videos. Additionally, study flyers were shared with our established collaborators for dissemination to potential participants and were made available in the university student center. Invited participants reported enrollment in the Computer Science and Engineering program, with two individuals also enrolled in Medical Engineering, all of whom are affiliated with the University of South Florida's College of Engineering. Each participant received a $75 e-gift card per brainstorming session and a $50 e-gift card for completing the final focus group. This study was approved by USF's Institutional Review Board as Study #005606, and was funded by NSF's Secure and Trustworthy Cyberspace Program, Grant #2039373.
 
@@ -373,6 +373,8 @@ Eight individuals were recruited for this study through various channels, includ
         <td>No</td>
     </tr>
 </table>
+
+                                          <h2>Overview of Methodology</h2>
 
                     Each brainstorming session consisted of lunch (15 minutes), study overview (15 minutes), brainstorming (45 minutes), and discussion (15 minutes). Lunch was served at the start of the session. Participants were welcomed to continue eating during the study overview, during which the study facilitators presented a slide deck which detailed the study goals, provided an ice breaker, defined fundamental concepts, and established a schedule for the day. During brainstorming time, participants broke into two groups, during which they were instructed to generate ideas with the following in mind: Quantity over quality, No idea is a bad idea, Creative and wild ideas are encouraged, Jot down everything, Avoid criticizing or praising ideas, Avoid lengthy discussion, and Use many tools to express your ideas. Participants were provided with a wide array of stationary during all sessions, including markers, mini whiteboards and dry erase markers, pens, paper pads, sticky notes, index cards, and stickers. During discussion, each group would present their ideas and the whole team would reflect and discuss commonalities and the research team would ask questions to gain clarity. We organized the sessions to scaffold the particpants’s thought processes by first asking them to assess the feasibility of personalized lessons to teach cybersecurity in high school, having participants generate specific lesson plan ideas according to their previously established assessment of feasibility, and then voting on the most promising ideas. We video and audio recorded each session, using two video cameras to focus on each group. Each session, we also photographed design artifacts and collected notes.
 
