--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -67,56 +67,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
-                  <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
-                  <!--                   <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="research.html">Research</a>
-                     </li> -->
-                  <li class="dropdown">
-                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                     Research<span class="caret"></span></a>
-                     <ul class="dropdown-menu">
-                        <li><a onclick="javascript:reset_menus();$('#tab-team-content').show();" href="#team">Team</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-topics-content').show();" href="#topics">Research Topics</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-participate-content').show();" href="#participate">Participate</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-pubs-content').show();" href="#pubs">Publications</a></li>
-                        <li><a onclick="javascript:reset_menus();$('#tab-join-content').show();" href="#join">Join Us</a></li>
-                     </ul>
-                  </li>
-                  <li class="dropdown">
-                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                     Publications<span class="caret"></span></a>
-                     <ul class="dropdown-menu">
-                        <li><a onclick="javascript:reset_menus();$('#tab-publications-content').show();" href="#publications">Selected</a></li>
-                        <li><a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en">All</a></li>
-                     </ul>
-                  </li>
-                  <!--<li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-awards-content').show();" href="#awards">Awards</a>
-                     </li>
-                     <li class="page-scroll">
-                     <a href="talks/">Talks</a>
-                     </li>-->
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#courses">Courses</a>
-                  </li>
-                  <!--
-                     <li class="page-scroll">
-                         <a onclick="javascript:reset_menus();$('#tab-systems-content').show();" href="#systems">Systems</a>
-                     </li>-->
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-service-content').show();" href="#service">Service</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-advising-content').show();" href="#advising">Advising</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-contact-content').show();" href="#contact">Contact</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#bs-example-navbar-collapse-2').toggle();">
-                     <span class="glyphicon glyphicon-search"></span>
-                     </a>
-                  </li>
+                                    <li><a href="research.html">Research</a></li>
+
+                 
+                   
                </ul>
             </div>
             <!-- /.navbar-collapse -->
