--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -21,6 +21,7 @@
          table, th, td {
   border: 1px solid black;
   border-radius: 10px;
+               font-size: 10px;
 }
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
