--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -22,6 +22,8 @@
   border: 1px solid black;
   border-radius: 10px;
                font-size: 10px;
+            cellpadding:"10";
+                     text-align: center;
 }
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
